# ChangeLog for Gentoo Linux System Intialization ("rc") scripts 
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL
# Written by Daniel Robbins (drobbins@gentoo.org)

* rc-scripts 1.4.3.12 (11 Nov 2003)

  11 Nov 2003; Martin Schlemmer <azarah@gentoo.org>:

    Add carrier detection to /etc/init.d/net.eth0 closing bug #25480;
    patch by Jordan Ritter <jpr5+gentoo@darkridge.com>.

    Add extra checks for critical directories to /sbin/rc.

  04 Nov 2003; Martin Schlemmer <azarah@gentoo.org>:

    Update /bin/rc-status giving a working '-u' parameter, bug #32417.
    Fix by Michael Frysinger <vapier@gentoo.org>.

  31 Oct 2003; Martin Schlemmer <azarah@gentoo.org>:

    Add support for --tty switch added to setfont and remove consolechars
    support; modified /etc/init.d/consolefont for this.  Also remove
    consoletools support from /etc/init.d/keymaps.

  29 Oct 2003; Martin Schlemmer <azarah@gentoo.org>:

    We should still use /sbin/udev as hotplug agent if /sbin/hotplug do
    not exist.  Updated /sbin/rc for this.

    Add a fix to /etc/init.d/keymaps for bug #32111 (we should not have
    '-u' in the call to loadkeys when using unicode).

    We should not use '-' in variable names for bash, bug #31184, thanks
    to Andreas Simon <yuipx@gmx.net>.  Updated /sbin/MAKEDEV.

  27 Oct 2003; Martin Schlemmer <azarah@gentoo.org>:

    Fix return code checking of fsck in /etc/init.d/checkfs, bug #31349.

  26 Oct 2003; Martin Schlemmer <azarah@gentoo.org>:

    The unmount stuff in /etc/init.d/halt.sh was flawed, in the fact that
    it called 'umount -t no<insert_fs_here>', which resulted in /proc, etc
    unmounted anyhow.  Change it to remount the last filesystems readonly
    without trying to unmount any.  This fixes a few cases where reboot
    would halt due to unmounted /proc, etc.

    This change set fixes two things:
    1)  In exporting all functions/variables in functions.sh, rc-services.sh