@@ -2,6 +2,14 @@
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL
 # Written by Daniel Robbins (drobbins@gentoo.org)
 
+  15 Nov 2003; Martin Schlemmer <azarah@gentoo.org>:
+
+    Add a warning to cachedepends.awk if a rc-script's name ends in
+    '.sh', bug #33134.  Add better error checking to /sbin/depscan.sh.
+
+    Fix /etc/init.d/halt.sh to not try and remount virtual devices,
+    also do a few cleanups.  Closes bug #33271.
+
 * rc-scripts 1.4.3.12 (11 Nov 2003)
 
   11 Nov 2003; Martin Schlemmer <azarah@gentoo.org>:
